src/test/deca/context/invalid/homemade/tests/test02_affectation_type/test02_affectation_type2.deca
// test invalide de la règle 0.2

{
    String x;
}